--- a/script.ipynb
+++ b/script.ipynb
@@ -114,38 +114,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(211, 'Drake with J. Cole', '2024-01-26T20:00:00', 'Paycom Center', 'Oklahoma City', 173.0, 21624.0)\n",
-      "(212, 'Billy Joel', '2023-11-22T20:00:00', 'Madison Square Garden', 'New York', 171.0, 12026.0)\n",
-      "(213, 'Rod Wave - Nostalgia Tour', '2023-12-17T20:00:00', 'Amerant Bank Arena', 'Sunrise', 176.0, 1066.0)\n",
-      "(214, 'Billy Joel & Stevie Nicks', '2024-03-09T19:00:00', 'AT&T Stadium', 'Arlington', 135.0, 2672.0)\n",
-      "(215, 'Trans-Siberian Orchestra-The Ghosts Of Christmas Eve-Matinee', '2023-11-21T15:00:00', 'Delta Center', 'Salt Lake City', 68.0, 144.0)\n",
-      "(216, 'Taylor Swift', '2024-10-27T19:00:00', 'Caesars Superdome', 'New Orleans', 1095.0, 76639.0)\n",
-      "(217, 'Taylor Swift', '2024-10-20T19:00:00', 'Hard Rock Stadium', 'Miami Gardens', 1455.0, 84164.0)\n",
-      "(218, 'Travis Scott', '2023-11-21T19:00:00', 'Moody Center ATX', 'Austin', 74.0, 11664.0)\n",
-      "(219, 'Trans-Siberian Orchestra-The Ghosts Of Christmas Eve', '2023-11-21T19:00:00', 'Delta Center', 'Salt Lake City', 81.0, 144.0)\n",
-      "(220, 'Drake with J. Cole', '2024-01-19T20:00:00', 'Ball Arena', 'Denver', 329.0, 27880.0)\n",
-      "(221, 'U2', '2023-12-01T20:00:00', 'MSG Sphere', 'Las Vegas', 563.0, 9139.0)\n",
-      "(222, 'Morgan Wallen: One Night At A Time 2024', '2024-07-26T16:30:00', 'AT&T Stadium', 'Arlington', 196.0, 1450.0)\n",
-      "(223, 'Rod Wave with Ari Lennox, Toosii, and G Herbo', '2023-11-22T20:00:00', 'United Center', 'Chicago', 195.0, 12129.0)\n",
-      "(224, 'Trans-Siberian Orchestra', '2023-12-22T19:30:00', 'Rocket Mortgage FieldHouse', 'Cleveland', 78.0, 900.0)\n",
-      "(225, 'U2', '2024-01-27T20:00:00', 'MSG Sphere', 'Las Vegas', 592.0, 9484.0)\n",
-      "(226, \"Drake with J. Cole: It's All A Blur Tour - Big As The What?\", '2024-02-24T20:00:00', 'Rocket Mortgage FieldHouse', 'Cleveland', 196.0, 1269.0)\n",
-      "(227, 'U2', '2023-12-02T20:00:00', 'MSG Sphere', 'Las Vegas', 765.0, 8247.0)\n",
-      "(228, 'Taylor Swift', '2024-11-03T19:00:00', 'Lucas Oil Stadium', 'Indianapolis', 1418.0, 148130.0)\n",
-      "(229, 'U2', '2023-12-08T20:00:00', 'MSG Sphere', 'Las Vegas', 563.0, 12749.0)\n",
-      "(230, 'U2', '2024-01-26T20:00:00', 'MSG Sphere', 'Las Vegas', 588.0, 6704.0)\n",
-      "(231, 'Drake', '2024-03-15T20:00:00', 'UBS Arena', 'Elmont', 201.0, 5470.0)\n",
-      "(232, 'Trans-Siberian Orchestra', '2023-12-22T15:00:00', 'Rocket Mortgage FieldHouse', 'Cleveland', 78.0, 191.0)\n",
-      "(233, 'Taylor Swift', '2024-10-26T19:00:00', 'Caesars Superdome', 'New Orleans', 1172.0, 82363.0)\n",
-      "(234, 'Drake with J. Cole', '2024-02-17T20:00:00', 'PPG Paints Arena', 'Pittsburgh', 196.0, 8846.0)\n",
-      "(235, 'Taylor Swift', '2024-10-25T19:00:00', 'Caesars Superdome', 'New Orleans', 1250.0, 147369.0)\n"
+      "Data cleared successfully.\n",
+      "(1, 'Drake with J. Cole', '2024-01-26T20:00:00', 'Paycom Center', 'Oklahoma City', 173.0, 21624.0)\n",
+      "(2, 'Billy Joel', '2023-11-22T20:00:00', 'Madison Square Garden', 'New York', 171.0, 12026.0)\n",
+      "(3, 'Rod Wave - Nostalgia Tour', '2023-12-17T20:00:00', 'Amerant Bank Arena', 'Sunrise', 176.0, 1066.0)\n",
+      "(4, 'Billy Joel & Stevie Nicks', '2024-03-09T19:00:00', 'AT&T Stadium', 'Arlington', 135.0, 2672.0)\n",
+      "(5, 'Trans-Siberian Orchestra-The Ghosts Of Christmas Eve-Matinee', '2023-11-21T15:00:00', 'Delta Center', 'Salt Lake City', 68.0, 144.0)\n",
+      "(6, 'Taylor Swift', '2024-10-27T19:00:00', 'Caesars Superdome', 'New Orleans', 1095.0, 76639.0)\n",
+      "(7, 'Taylor Swift', '2024-10-20T19:00:00', 'Hard Rock Stadium', 'Miami Gardens', 1455.0, 84164.0)\n",
+      "(8, 'Travis Scott', '2023-11-21T19:00:00', 'Moody Center ATX', 'Austin', 74.0, 11664.0)\n",
+      "(9, 'Trans-Siberian Orchestra-The Ghosts Of Christmas Eve', '2023-11-21T19:00:00', 'Delta Center', 'Salt Lake City', 81.0, 144.0)\n",
+      "(10, 'Drake with J. Cole', '2024-01-19T20:00:00', 'Ball Arena', 'Denver', 329.0, 27880.0)\n",
+      "(11, 'U2', '2023-12-01T20:00:00', 'MSG Sphere', 'Las Vegas', 563.0, 9139.0)\n",
+      "(12, 'Morgan Wallen: One Night At A Time 2024', '2024-07-26T16:30:00', 'AT&T Stadium', 'Arlington', 196.0, 1450.0)\n",
+      "(13, 'Rod Wave with Ari Lennox, Toosii, and G Herbo', '2023-11-22T20:00:00', 'United Center', 'Chicago', 195.0, 12129.0)\n",
+      "(14, 'Trans-Siberian Orchestra', '2023-12-22T19:30:00', 'Rocket Mortgage FieldHouse', 'Cleveland', 78.0, 900.0)\n",
+      "(15, 'U2', '2024-01-27T20:00:00', 'MSG Sphere', 'Las Vegas', 592.0, 9484.0)\n",
+      "(16, \"Drake with J. Cole: It's All A Blur Tour - Big As The What?\", '2024-02-24T20:00:00', 'Rocket Mortgage FieldHouse', 'Cleveland', 196.0, 1269.0)\n",
+      "(17, 'U2', '2023-12-02T20:00:00', 'MSG Sphere', 'Las Vegas', 765.0, 8247.0)\n",
+      "(18, 'Taylor Swift', '2024-11-03T19:00:00', 'Lucas Oil Stadium', 'Indianapolis', 1418.0, 148130.0)\n",
+      "(19, 'U2', '2023-12-08T20:00:00', 'MSG Sphere', 'Las Vegas', 563.0, 12749.0)\n",
+      "(20, 'U2', '2024-01-26T20:00:00', 'MSG Sphere', 'Las Vegas', 588.0, 6704.0)\n",
+      "(21, 'Drake', '2024-03-15T20:00:00', 'UBS Arena', 'Elmont', 201.0, 5470.0)\n",
+      "(22, 'Trans-Siberian Orchestra', '2023-12-22T15:00:00', 'Rocket Mortgage FieldHouse', 'Cleveland', 78.0, 191.0)\n",
+      "(23, 'Taylor Swift', '2024-10-26T19:00:00', 'Caesars Superdome', 'New Orleans', 1172.0, 82363.0)\n",
+      "(24, 'Drake with J. Cole', '2024-02-17T20:00:00', 'PPG Paints Arena', 'Pittsburgh', 196.0, 8846.0)\n",
+      "(25, 'Taylor Swift', '2024-10-25T19:00:00', 'Caesars Superdome', 'New Orleans', 1250.0, 147369.0)\n"
      ]
     }
    ],
@@ -153,8 +154,9 @@
     "def clear_data():\n",
     "    conn = sqlite3.connect('events.db')\n",
     "    c = conn.cursor()\n",
-    "    c.execute('DELETE FROM events')  # This should clear all data from the events table\n",
-    "    conn.commit()  # Committing the changes to the database\n",
+    "    c.execute('DELETE FROM events')\n",
+    "    c.execute('UPDATE sqlite_sequence SET seq = 0 WHERE name = \"events\"')  # Reset auto-increment counter\n",
+    "    conn.commit()\n",
     "    conn.close()\n",
     "\n",
     "def main():\n",
@@ -177,6 +179,50 @@
     "\n",
     "if __name__ == '__main__':\n",
     "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_event_prices(event):\n",
+    "    conn = sqlite3.connect('events.db')\n",
+    "    c = conn.cursor()\n",
+    "    c.execute('''\n",
+    "        UPDATE events \n",
+    "        SET lowest_price = ?, highest_price = ? \n",
+    "        WHERE event_id = ?\n",
+    "    ''', (event['lowest_price'], event['highest_price'], event['event_id']))\n",
+    "    conn.commit()\n",
+    "    conn.close()\n",
+    "\n",
+    "def update_data(parsed_data):\n",
+    "    for event in parsed_data:\n",
+    "        update_event_prices(event)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    "\n",
+    "def delete_past_events():\n",
+    "    today = datetime.datetime.now().strftime(\"%Y-%m-%dT%H:%M:%S\")\n",
+    "    conn = sqlite3.connect('events.db')\n",
+    "    c = conn.cursor()\n",
+    "    c.execute('''\n",
+    "        DELETE FROM events \n",
+    "        WHERE event_date < ?\n",
+    "    ''', (today,))\n",
+    "    conn.commit()\n",
+    "    conn.close()\n",
+    "\n",
+    "# Call this function as needed, possibly in the same interval as your updates"
    ]
   }
  ],
